--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/react": "^6.1.15",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
