--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@reduxjs/toolkit": "^2.5.1",
+    "@stripe/react-stripe-js": "^3.3.0",
+    "@stripe/stripe-js": "^5.8.0",
     "axios": "^1.7.9",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
