--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stripe/react-stripe-js": "^3.3.0",
     "@stripe/stripe-js": "^5.8.0",
     "axios": "^1.7.9",
+    "gapi-script": "^1.2.0",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
