--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@reduxjs/toolkit": "^2.5.1",
     "@stripe/react-stripe-js": "^3.3.0",
     "@stripe/stripe-js": "^5.8.0",
